# ai_summarize_s3_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  QDRANT_USAGE.md  README.md  docker-compose.yml  pyproject.toml
src/: main.py  mcp_server.py  qdrant_manager.py  summarize_and_store.py  tools.py  transcript.py
src/api/: __init__.py
src/api/routes/: add.py  chat.py  health.py  search.py  summary.py
src/core/: config.py
src/schemas/: common.py  health.py  search.py  summary.py
src/services/: file_service.py  local_models_service.py  qdrant_service.py  rag_service.py  summary_service.py
src/utils/: media_processing.py
