[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "black>=25.1.0",
    "faster-whisper>=1.1.1",
    "fastmcp>=2.8.1",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.33.0",
    "isort>=6.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langgraph>=0.4.8",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "openai>=1.88.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
